--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -1,31 +1,10 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
-    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <!-- Path to Framework7 Library CSS-->
     <link rel="stylesheet" href="css/framework7.min.css">
     <title>Shake ton BDE</title>
 </head>
@@ -38,11 +17,6 @@
             <p>Left panel content goes here</p>
         </div>
     </div>
-    <div class="panel panel-right panel-cover">
-        <div class="content-block">
-            <p>Right panel content goes here</p>
-        </div>
-    </div>
     <div class="views">
         <div class="view view-main">
             <div class="navbar">
@@ -50,7 +24,7 @@
                     <div class="left">
                         <a href="#" class="link icon-only open-panel"><i class="icon icon-bars-blue"></i></a>
                     </div>
-                    <div class="center sliding">Awesome App</div>
+                    <div class="center sliding">Shake ton BDE</div>
                 </div>
             </div>
             <div class="pages navbar-through toolbar-through">
@@ -111,10 +85,13 @@
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript">
-    app.initialize();
+        // Initialize you app
+        var app = new Framework7();
+        // Export selectors engine
+        var $ = Framework7.$;
     </script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
