[Geoloc] affichage de la map

--- a/www/event.html
+++ b/www/event.html
@@ -5,11 +5,13 @@
   </div>
 </div>
 <div class="pages navbar-through">
-  <div data-page="events" class="page">
-    <div class="page-content events-content">
-      <div id="eventsMap"></div>
-      <div class="list-block">
-        <ul></ul>
+  <div data-page="event" class="page">
+    <div class="page-content event-content">
+      <div class="content-block-title"></div>
+      <div class="content-block">
+        <div class="content-block-inner">
+
+        </div>
       </div>
     </div>
   </div>
