--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -7,15 +7,24 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/angular-resource.js"></script>
-    <script src="js/angulartics-ga.min.js"></script>
 
+    <!-- Google Analytics -->
+    <script src="js/angulartics.js"></script>
+    <script src="js/angulartics-ga.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-50987277-2', { 'cookieDomain': 'none' });
+    </script>
+    <!-- End Google Analytics -->
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
