--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Shake Ton BDE</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -14,17 +14,6 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/angular-resource.js"></script>
 
-    <!-- Google Analytics -->
-    <script src="js/angulartics.js"></script>
-    <script src="js/angulartics-ga.js"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-50987277-2', { 'cookieDomain': 'none' });
-    </script>
-    <!-- End Google Analytics -->
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
