--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/i18n.js"></script>
+    <script src="js/fr.js"></script>
 
   </head>
 
