[i18n] Menu de choix de la langue dans la sidebar

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -21,7 +21,7 @@
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/fr.js"></script>
+    <script src="js/translations/fr.js"></script>
 
   </head>
 
