[Connection] Done ! [Invite] add event choice

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <link href="css/style.css" rel="stylesheet">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5F4XMRdVRaT-rxWspvscylXgTVQ9O6Po&sensor=false"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/angular-resource.js"></script>
